# URdorm-Dormitory-Systemm

./: CMakeLists.txt  DataManager.cpp  DataManager.h  InfoPage.cpp  InfoPage.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  NotificationsPage.cpp  NotificationsPage.h  README.md  ServicesPage.cpp  ServicesPage.h  SplashScreen.cpp  SplashScreen.h  Student.h  StudentCardPage.cpp  StudentCardPage.h  ThemeManager.cpp  ThemeManager.h  WaterStatusPage.cpp  WaterStatusPage.h  main.cpp
